feat: Update header layout and styles for improved navigation and branding

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,12 +10,17 @@
   <!-- Dashboard -->
   <div id="dashboard-view" class="hidden">
     <div class="header">
-      <h1>Übersicht</h1>
-      <nav>
+      <div class="header-top">
+        <a href="index.html" class="logo">&lt;14kb</a>
+        <div class="header-secondary">
+          <a href="/" target="_blank">Blog ↗</a>
+          <a href="#" id="logout-btn" class="logout-link">Logout</a>
+        </div>
+      </div>
+      <nav class="main-nav">
+        <a href="index.html" class="active">Übersicht</a>
         <a href="editor.html">+ Neu</a>
         <a href="settings.html">Einstellungen</a>
-        <a href="/" target="_blank">Blog</a>
-        <a href="#" id="logout-btn">Logout</a>
       </nav>
     </div>
 
