--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -8,10 +8,16 @@
 </head>
 <body>
   <div class="header">
-    <h1>Einstellungen</h1>
-    <nav>
-      <a href="index.html">← Zurück</a>
-      <a href="/" target="_blank">Blog</a>
+    <div class="header-top">
+      <a href="index.html" class="logo">&lt;14kb</a>
+      <div class="header-secondary">
+        <a href="/" target="_blank">Blog ↗</a>
+      </div>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Übersicht</a>
+      <a href="editor.html">+ Neu</a>
+      <a href="settings.html" class="active">Einstellungen</a>
     </nav>
   </div>
 
