--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,16 @@
 </head>
 <body>
   <div class="header">
-    <h1>New Build</h1>
-    <nav>
-      <a href="index.html">← Back</a>
-      <a href="/" target="_blank">Blog</a>
+    <div class="header-top">
+      <a href="index.html" class="logo">&lt;14kb</a>
+      <div class="header-secondary">
+        <a href="/" target="_blank">Blog ↗</a>
+      </div>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Übersicht</a>
+      <a href="editor.html" class="active">+ Neu</a>
+      <a href="settings.html">Einstellungen</a>
     </nav>
   </div>
 
