feat: Refactor search box and page size selector layout for improved usability

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -33,20 +33,22 @@
           <button type="button" class="tab-btn active" data-tab="posts">Posts</button>
           <button type="button" class="tab-btn" data-tab="pages">Seiten</button>
         </div>
-        <div class="search-box">
-          <svg class="search-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <circle cx="11" cy="11" r="8"/><path d="m21 21-4.35-4.35"/>
-          </svg>
-          <input type="text" id="search-input" placeholder="Suche...">
-        </div>
-        <div class="page-size-selector">
-          <label for="page-size">Anzeigen:</label>
-          <select id="page-size">
-            <option value="5">5</option>
-            <option value="10" selected>10</option>
-            <option value="20">20</option>
-            <option value="all">Alle</option>
-          </select>
+        <div class="list-controls">
+          <div class="search-box">
+            <svg class="search-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="11" cy="11" r="8"/><path d="m21 21-4.35-4.35"/>
+            </svg>
+            <input type="text" id="search-input" placeholder="Suche...">
+          </div>
+          <div class="page-size-selector">
+            <label for="page-size">Anzeigen:</label>
+            <select id="page-size">
+              <option value="5">5</option>
+              <option value="10" selected>10</option>
+              <option value="20">20</option>
+              <option value="all">Alle</option>
+            </select>
+          </div>
         </div>
       </div>
       <div class="card-body">
