--- a/public/admin/settings.html
+++ b/public/admin/settings.html
@@ -29,6 +29,7 @@
         </a>
       </nav>
     </div>
+    <h1 class="page-title">Einstellungen</h1>
   </div>
 
   <div id="message" class="message hidden"></div>
